--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,43 +1,87 @@
+@font-face {
+	font-family: "Inter";
+	src: url("../public/fonts/Inter-VariableFont_slnt,wght.ttf");
+}
+
+
+@layer base {
+}
 @tailwind base;
+
+@layer components {
+	.custom-shape-divider-top-1652322951 {
+		@apply text-teal-100;
+		top: 0;
+		left: 0;
+		width: 100%;
+		overflow-x: hidden;
+		/* overflow-y: visible; */
+		line-height: 0;
+	}
+	
+	.custom-shape-divider-top-1652322951 svg {
+		position: relative;
+		display: block;
+		width: calc(145% + 1.3px);
+		height: 150px;
+	}
+	
+	.custom-shape-divider-top-1652322951 .shape-fill {
+		fill: #e5e7eb;
+	}
+}
 @tailwind components;
+
+@layer utilities {
+	.font-thin {
+		font-variation-settings: "wght" 100;
+	}
+	.font-extralight {
+		font-variation-settings: "wght" 200;
+	}
+	.font-light {
+		font-variation-settings: "wght" 300;
+	}
+	.font-normal {
+		font-variation-settings: "wght" 400;
+	}
+	.font-medium {
+		font-variation-settings: "wght" 500;
+	}
+	.font-semibold {
+		font-variation-settings: "wght" 600;
+	}
+	.font-bold {
+		font-variation-settings: "wght" 700;
+	}
+	.font-extrabold {
+		font-variation-settings: "wght" 800;
+	}
+	.font-black {
+		font-variation-settings: "wght" 900;
+	}
+}
+
 @tailwind utilities;
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Inter, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Inter, Segoe UI, Roboto,
+		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+		sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 *:focus {
-  outline: none;
-}
-
-.custom-shape-divider-top-1652322951 {
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow-x: hidden;
-  /* overflow-y: visible; */
-  line-height: 0;
-}
-
-.custom-shape-divider-top-1652322951 svg {
-  position: relative;
-  display: block;
-  width: calc(145% + 1.3px);
-  height: 150px;
-}
-
-.custom-shape-divider-top-1652322951 .shape-fill {
-  fill: #e5e7eb;
+	outline: none;
 }
