feat: new and top problems use real problems

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,15 +69,15 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		overflow: hidden;
+		height: 4rem;
 		line-height: 0;
 	}
 
 	.shape-divider svg {
 		position: relative;
 		display: block;
-		width: calc(100% + 1.3px);
-		height: 128px;
+		width: 100%;
+		height: 4rem;
 	}
 
 	.shape-divider .shape-fill {
