style: use native font for formulas

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 }
 
 @layer base {
-	*:not(:is(.base, .mord)) {
+	*:not(:is(.base, .mord, .katex *)) {
 		font-family: "Inter";
 		font-size: 1rem;
 	}
