feat: register & login

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,8 +34,9 @@
   .h5 {
     @apply head-style;
   }
+  a,
   *:not(a) > h2 {
-    @apply text-teal-700;
+    @apply text-teal-600 hover:text-teal-500 active:text-teal-400 focus:text-teal-400;
   }
   .markdown ul {
     list-style-type: disc;
