chore: correctly show actions for logged in users

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,10 +2,13 @@
   p,
   span,
   input {
-    @apply text-zinc-800 text-base;
+    @apply text-zinc-800 text-base font-medium;
   }
   *:focus {
     outline: none;
+  }
+  strong {
+    @apply font-semibold;
   }
   body,
   html,
