--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,10 +31,10 @@
     @apply head-style text-xl;
   }
   *:not(a) > h2 {
-    @apply text-teal-600;
+    @apply text-blue-600;
   }
   a {
-    @apply text-teal-600 hover:text-teal-500 active:text-teal-400 focus:text-teal-400;
+    @apply text-blue-600 hover:text-blue-500 active:text-blue-400 focus:text-blue-400;
   }
   .markdown ul {
     list-style-type: disc;
