refactor: button stylings

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,452 @@
 @layer base {
+  .bg-primary-1 {
+    @apply bg-blue-100;
+  }
+  .bg-primary-2 {
+    @apply bg-blue-200;
+  }
+  .bg-primary-3 {
+    @apply bg-blue-300;
+  }
+  .bg-primary-4 {
+    @apply bg-blue-400;
+  }
+  .bg-primary-5 {
+    @apply bg-blue-500;
+  }
+  .bg-primary-6 {
+    @apply bg-blue-600;
+  }
+  .bg-primary-7 {
+    @apply bg-blue-700;
+  }
+  .bg-primary-8 {
+    @apply bg-blue-800;
+  }
+  .bg-primary-9 {
+    @apply bg-blue-900;
+  }
+
+  .bg-secondary-1 {
+    @apply bg-gray-100;
+  }
+  .bg-secondary-2 {
+    @apply bg-gray-200;
+  }
+  .bg-secondary-3 {
+    @apply bg-gray-300;
+  }
+  .bg-secondary-4 {
+    @apply bg-gray-400;
+  }
+  .bg-secondary-5 {
+    @apply bg-gray-500;
+  }
+  .bg-secondary-6 {
+    @apply bg-gray-600;
+  }
+  .bg-secondary-7 {
+    @apply bg-gray-700;
+  }
+  .bg-secondary-8 {
+    @apply bg-gray-800;
+  }
+  .bg-secondary-9 {
+    @apply bg-gray-900;
+  }
+
+  .bg-warning-1 {
+    @apply bg-yellow-100;
+  }
+  .bg-warning-2 {
+    @apply bg-yellow-200;
+  }
+  .bg-warning-3 {
+    @apply bg-yellow-300;
+  }
+  .bg-warning-4 {
+    @apply bg-yellow-400;
+  }
+  .bg-warning-5 {
+    @apply bg-yellow-500;
+  }
+  .bg-warning-6 {
+    @apply bg-yellow-600;
+  }
+  .bg-warning-7 {
+    @apply bg-yellow-700;
+  }
+  .bg-warning-8 {
+    @apply bg-yellow-800;
+  }
+  .bg-warning-9 {
+    @apply bg-yellow-900;
+  }
+
+  .bg-danger-1 {
+    @apply bg-red-100;
+  }
+  .bg-danger-2 {
+    @apply bg-red-200;
+  }
+  .bg-danger-3 {
+    @apply bg-red-300;
+  }
+  .bg-danger-4 {
+    @apply bg-red-400;
+  }
+  .bg-danger-5 {
+    @apply bg-red-500;
+  }
+  .bg-danger-6 {
+    @apply bg-red-600;
+  }
+  .bg-danger-7 {
+    @apply bg-red-700;
+  }
+  .bg-danger-8 {
+    @apply bg-red-800;
+  }
+  .bg-danger-9 {
+    @apply bg-red-900;
+  }
+
+  .border-primary-1 {
+    @apply border-blue-100;
+  }
+  .border-primary-2 {
+    @apply border-blue-200;
+  }
+  .border-primary-3 {
+    @apply border-blue-300;
+  }
+  .border-primary-4 {
+    @apply border-blue-400;
+  }
+  .border-primary-5 {
+    @apply border-blue-500;
+  }
+  .border-primary-6 {
+    @apply border-blue-600;
+  }
+  .border-primary-7 {
+    @apply border-blue-700;
+  }
+  .border-primary-8 {
+    @apply border-blue-800;
+  }
+  .border-primary-9 {
+    @apply border-blue-900;
+  }
+
+  .border-secondary-1 {
+    @apply border-gray-100;
+  }
+  .border-secondary-2 {
+    @apply border-gray-200;
+  }
+  .border-secondary-3 {
+    @apply border-gray-300;
+  }
+  .border-secondary-4 {
+    @apply border-gray-400;
+  }
+  .border-secondary-5 {
+    @apply border-gray-500;
+  }
+  .border-secondary-6 {
+    @apply border-gray-600;
+  }
+  .border-secondary-7 {
+    @apply border-gray-700;
+  }
+  .border-secondary-8 {
+    @apply border-gray-800;
+  }
+  .border-secondary-9 {
+    @apply border-gray-900;
+  }
+
+  .border-warning-1 {
+    @apply border-yellow-100;
+  }
+  .border-warning-2 {
+    @apply border-yellow-200;
+  }
+  .border-warning-3 {
+    @apply border-yellow-300;
+  }
+  .border-warning-4 {
+    @apply border-yellow-400;
+  }
+  .border-warning-5 {
+    @apply border-yellow-500;
+  }
+  .border-warning-6 {
+    @apply border-yellow-600;
+  }
+  .border-warning-7 {
+    @apply border-yellow-700;
+  }
+  .border-warning-8 {
+    @apply border-yellow-800;
+  }
+  .border-warning-9 {
+    @apply border-yellow-900;
+  }
+
+  .border-danger-1 {
+    @apply border-red-100;
+  }
+  .border-danger-2 {
+    @apply border-red-200;
+  }
+  .border-danger-3 {
+    @apply border-red-300;
+  }
+  .border-danger-4 {
+    @apply border-red-400;
+  }
+  .border-danger-5 {
+    @apply border-red-500;
+  }
+  .border-danger-6 {
+    @apply border-red-600;
+  }
+  .border-danger-7 {
+    @apply border-red-700;
+  }
+  .border-danger-8 {
+    @apply border-red-800;
+  }
+  .border-danger-9 {
+    @apply border-red-900;
+  }
+
+  .outline-primary-1 {
+    @apply outline-blue-100;
+  }
+  .outline-primary-2 {
+    @apply outline-blue-200;
+  }
+  .outline-primary-3 {
+    @apply outline-blue-300;
+  }
+  .outline-primary-4 {
+    @apply outline-blue-400;
+  }
+  .outline-primary-5 {
+    @apply outline-blue-500;
+  }
+  .outline-primary-6 {
+    @apply outline-blue-600;
+  }
+  .outline-primary-7 {
+    @apply outline-blue-700;
+  }
+  .outline-primary-8 {
+    @apply outline-blue-800;
+  }
+  .outline-primary-9 {
+    @apply outline-blue-900;
+  }
+
+  .outline-secondary-1 {
+    @apply outline-gray-100;
+  }
+  .outline-secondary-2 {
+    @apply outline-gray-200;
+  }
+  .outline-secondary-3 {
+    @apply outline-gray-300;
+  }
+  .outline-secondary-4 {
+    @apply outline-gray-400;
+  }
+  .outline-secondary-5 {
+    @apply outline-gray-500;
+  }
+  .outline-secondary-6 {
+    @apply outline-gray-600;
+  }
+  .outline-secondary-7 {
+    @apply outline-gray-700;
+  }
+  .outline-secondary-8 {
+    @apply outline-gray-800;
+  }
+  .outline-secondary-9 {
+    @apply outline-gray-900;
+  }
+
+  .outline-warning-1 {
+    @apply outline-yellow-100;
+  }
+  .outline-warning-2 {
+    @apply outline-yellow-200;
+  }
+  .outline-warning-3 {
+    @apply outline-yellow-300;
+  }
+  .outline-warning-4 {
+    @apply outline-yellow-400;
+  }
+  .outline-warning-5 {
+    @apply outline-yellow-500;
+  }
+  .outline-warning-6 {
+    @apply outline-yellow-600;
+  }
+  .outline-warning-7 {
+    @apply outline-yellow-700;
+  }
+  .outline-warning-8 {
+    @apply outline-yellow-800;
+  }
+  .outline-warning-9 {
+    @apply outline-yellow-900;
+  }
+
+  .outline-danger-1 {
+    @apply outline-red-100;
+  }
+  .outline-danger-2 {
+    @apply outline-red-200;
+  }
+  .outline-danger-3 {
+    @apply outline-red-300;
+  }
+  .outline-danger-4 {
+    @apply outline-red-400;
+  }
+  .outline-danger-5 {
+    @apply outline-red-500;
+  }
+  .outline-danger-6 {
+    @apply outline-red-600;
+  }
+  .outline-danger-7 {
+    @apply outline-red-700;
+  }
+  .outline-danger-8 {
+    @apply outline-red-800;
+  }
+  .outline-danger-9 {
+    @apply outline-red-900;
+  }
+
+  .text-primary-1 {
+    @apply text-blue-100;
+  }
+  .text-primary-2 {
+    @apply text-blue-200;
+  }
+  .text-primary-3 {
+    @apply text-blue-300;
+  }
+  .text-primary-4 {
+    @apply text-blue-400;
+  }
+  .text-primary-5 {
+    @apply text-blue-500;
+  }
+  .text-primary-6 {
+    @apply text-blue-600;
+  }
+  .text-primary-7 {
+    @apply text-blue-700;
+  }
+  .text-primary-8 {
+    @apply text-blue-800;
+  }
+  .text-primary-9 {
+    @apply text-blue-900;
+  }
+
+  .text-secondary-1 {
+    @apply text-gray-100;
+  }
+  .text-secondary-2 {
+    @apply text-gray-200;
+  }
+  .text-secondary-3 {
+    @apply text-gray-300;
+  }
+  .text-secondary-4 {
+    @apply text-gray-400;
+  }
+  .text-secondary-5 {
+    @apply text-gray-500;
+  }
+  .text-secondary-6 {
+    @apply text-gray-600;
+  }
+  .text-secondary-7 {
+    @apply text-gray-700;
+  }
+  .text-secondary-8 {
+    @apply text-gray-800;
+  }
+  .text-secondary-9 {
+    @apply text-gray-900;
+  }
+
+  .text-warning-1 {
+    @apply text-yellow-100;
+  }
+  .text-warning-2 {
+    @apply text-yellow-200;
+  }
+  .text-warning-3 {
+    @apply text-yellow-300;
+  }
+  .text-warning-4 {
+    @apply text-yellow-400;
+  }
+  .text-warning-5 {
+    @apply text-yellow-500;
+  }
+  .text-warning-6 {
+    @apply text-yellow-600;
+  }
+  .text-warning-7 {
+    @apply text-yellow-700;
+  }
+  .text-warning-8 {
+    @apply text-yellow-800;
+  }
+  .text-warning-9 {
+    @apply text-yellow-900;
+  }
+
+  .text-danger-1 {
+    @apply text-red-100;
+  }
+  .text-danger-2 {
+    @apply text-red-200;
+  }
+  .text-danger-3 {
+    @apply text-red-300;
+  }
+  .text-danger-4 {
+    @apply text-red-400;
+  }
+  .text-danger-5 {
+    @apply text-red-500;
+  }
+  .text-danger-6 {
+    @apply text-red-600;
+  }
+  .text-danger-7 {
+    @apply text-red-700;
+  }
+  .text-danger-8 {
+    @apply text-red-800;
+  }
+  .text-danger-9 {
+    @apply text-red-900;
+  }
+
   p,
   span,
   input {
@@ -45,11 +493,11 @@
   .markdown li:last-child {
     margin-bottom: 1rem;
   }
-  th {
+  th.table {
     @apply bg-gray-100 uppercase tracking-wider;
   }
-  th,
-  td {
+  th.table,
+  td.table {
     @apply border border-gray-400;
     padding: 0.5rem 1rem;
   }
