feat: answer contest problem (wip)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,7 @@
     height: 100%;
   }
   .head-style {
-    @apply font-semibold;
+    /* @apply font-semibold; */
   }
   h1,
   .h1 {
@@ -45,6 +45,14 @@
   }
   a {
     @apply text-primary-600 hover:text-primary-500 active:text-primary-400 focus:text-primary-400;
+  }
+
+  ol.list {
+    list-style-type: decimal;
+  }
+  ol.list li {
+    @apply text-base font-medium;
+    margin-left: 2rem;
   }
 
   .markdown,
