--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -69,8 +69,16 @@
   .markdown li:last-child {
     margin-bottom: 1rem;
   }
+
+  .table-container {
+    @apply border border-secondary-300 rounded-md overflow-hidden;
+  }
+
   table.table th {
-    @apply bg-secondary-100 text-left;
+    @apply bg-secondary-100;
+  }
+  table.table th {
+    text-align: unset;
   }
   table.table th,
   table.table td {
